# Document_Signature_Request_Application

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
Prototype/: ApproversList_Live.csv  RequestInfo_Live.csv
config/: settings.py  urls.py
docs/: architecture.md
signing/: admin.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
signing/migrations/: 0001_initial.py
static/css/: app.css
templates/: base.html
templates/registration/: login.html
templates/signing/: approval_form.html  dashboard.html  request_detail.html  request_form.html
