[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsign-request-app"
version = "0.1.0"
description = "Python-first document signature request application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1,<5.2",
    "celery>=5.4,<5.5",
    "redis>=5.2,<5.3",
    "Pillow>=11.1,<11.2",
    "pypdf>=5.4,<5.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["config*", "signing*"]
